Trying to fix text cut off in safari again

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -109,7 +109,8 @@ header {
 
     input,
     select {
-        height: 3.4vh;
+        height: 4vh;
+        line-height: 4vh;
         width: 40vw;
         font-size: 2.75vh;
         text-align: center;
